fix(security): Add radix parameter to remaining parseInt calls (5 locations)
* fix(security): Add radix parameter to remaining parseInt calls in tools, tests, and models

- tools/fixers/fix-unknown-smart.js: Add radix 10 to lineNum parsing
- tools/fixers/fix-unknown-types.js: Add radix 10 to lineNum and col parsing
- tests/loop-runner.mjs: Add radix 10 to environment variable parsing
- server/models/finance/Payment.ts: Add radix 10 to payment number extraction
- server/models/finance/Expense.ts: Add radix 10 to expense number extraction

Prevents octal interpretation bugs in parseInt() calls.
Part of system-wide security audit (Category 2: Security & Compliance).

Resolves: SYSTEM_WIDE_ISSUES_AUDIT.md - parseInt fixes (5 locations)

* fix(ci): Add pnpm setup to 3 missing workflows

- build-sourcemaps.yml: Added pnpm@9.0.0 setup, changed npm → pnpm
- requirements-index.yml: Added pnpm@9.0.0 setup and install step
- fixzit-quality-gates.yml: Already has pnpm detection logic

Ensures consistent pnpm 9.0.0 across all CI workflows.
Prevents npm/pnpm conflicts in CI builds.

Category 1: CI/CD & Workflow - 7/7 workflows (100% complete)
System Progress: 209/3173 → 212/3173 (6.7%)

* feat(lib): Create comprehensive safe fetch utilities

- safeFetch(): Error-handled fetch wrapper
- safeFetchJSON(): Automatic JSON parsing with error handling
- safeFetcher(): SWR-compatible fetcher
- safeFetchWithRetry(): Retry logic for transient failures
- createSafeFetch(): Factory for configured fetchers
- FetchError: Custom error class with status/url context

Prevents unhandled promise rejections from fetch() calls.
Provides consistent error handling across application.

Category 4: Promise Handling - Foundation utility created
Next: Apply to ALL 29+ unhandled fetch locations

* docs: Add comprehensive fix plan and root cause analysis for 7% completion

WHY_7_PERCENT_NOT_100.md:
- Explains why user sees 7.1% instead of expected 100%
- Root cause: Samples fixed, not all instances
- Example

--- a/docs/translations/translation-audit.json
+++ b/docs/translations/translation-audit.json
@@ -1,8 +1,8 @@
 {
   "stats": {
-    "files": 379,
+    "files": 380,
     "usedKeys": 1574,
-    "hasDynamic": true,
+    "hasDynamic": false,
     "enCount": 2006,
     "arCount": 2006,
     "parityGap": 0
@@ -870,13 +870,6 @@
     ],
     "common.selected": [
       "/workspaces/Fixzit/app/finance/expenses/new/page.tsx"
-    ],
-    "UNSAFE_DYNAMIC": [
-      "/workspaces/Fixzit/app/finance/expenses/new/page.tsx",
-      "/workspaces/Fixzit/app/settings/page.tsx",
-      "/workspaces/Fixzit/components/Sidebar.tsx",
-      "/workspaces/Fixzit/components/SupportPopup.tsx",
-      "/workspaces/Fixzit/components/finance/TrialBalanceReport.tsx"
     ],
     "finance.invoice.issueDateRequired": [
       "/workspaces/Fixzit/app/finance/invoices/new/page.tsx"
@@ -5078,5 +5071,5 @@
       "/workspaces/Fixzit/contexts/TranslationContext.test.tsx"
     ]
   },
-  "timestamp": "2025-11-12T07:09:09.177Z"
+  "timestamp": "2025-11-12T12:37:33.553Z"
 }
