fix(i18n): Add missing finance category translations for dynamic templates
- Added maintenance_repair, utilities, office_supplies, electrical, hvac, plumbing
- Ensures all expense/budget categories have proper translations
- Prevents fallback to untranslated English values in Arabic locale

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -341,9 +341,15 @@
     "category": {
       "operational": "تشغيلي",
       "maintenance": "صيانة",
+      "maintenance_repair": "الصيانة والإصلاحات",
       "capital": "رأسمالي",
-      "utility": "مرافق",
+      "utility": "خدمات",
+      "utilities": "المرافق",
       "administrative": "إداري",
+      "office_supplies": "مستلزمات المكتب",
+      "electrical": "كهربائي",
+      "hvac": "التكييف والتهوية",
+      "plumbing": "السباكة",
       "other": "أخرى"
     },
     "accountType": {
