--- a/i18n/en.json
+++ b/i18n/en.json
@@ -350,6 +350,20 @@
       "electrical": "Electrical",
       "hvac": "HVAC",
       "plumbing": "Plumbing",
+      "travel": "Travel",
+      "salaries": "Salaries",
+      "marketing": "Marketing",
+      "rent": "Rent",
+      "insurance": "Insurance",
+      "equipment": "Equipment",
+      "supplies": "Supplies",
+      "services": "Services",
+      "training": "Training",
+      "consulting": "Consulting",
+      "legal": "Legal",
+      "technology": "Technology",
+      "facilities": "Facilities",
+      "security": "Security",
       "other": "Other"
     },
     "accountType": {
