feat: Add comprehensive FM module translations (AR/EN)
TRANSLATIONS ADDED:
- Work Orders: Complete CRUD operations, statuses, board, history, PM, SLA
- Properties: All fields, types (residential/commercial/mixed), units management
- Assets: Asset management, categories, serial numbers, warranties
- Tenants: Tenant management, leases, rent, deposits, statuses
- Vendors: Vendor management, ratings, approval statuses
- Projects: Project tracking, budgets, timelines
- RFQs: Request for Quotations, bids, deadlines
- Invoices: Invoice management, payment tracking, statuses
- Common Actions: Search, filter, export, CRUD operations, confirmations

SCOPE:
- 200+ new translation keys
- Both Arabic (RTL) and English (LTR)
- Covers all FM module pages mentioned in audit report
- Consistent naming conventions across modules

Next: Fix SelectValue deprecation warnings (38 occurrences)

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -780,5 +780,195 @@
     "obj": "اختبار كائن",
     "watch-all": "مشاهدة الكل",
     "welcome": "مرحباً بك"
+  },
+  "fm": {
+    "title": "إدارة المرافق",
+    "dashboard": "لوحة التحكم",
+    "workOrders": {
+      "title": "أوامر العمل",
+      "create": "إنشاء أمر عمل",
+      "view": "عرض أوامر العمل",
+      "edit": "تعديل أمر العمل",
+      "delete": "حذف أمر العمل",
+      "status": "الحالة",
+      "priority": "الأولوية",
+      "assignedTo": "مكلف إلى",
+      "dueDate": "تاريخ الاستحقاق",
+      "description": "الوصف",
+      "property": "العقار",
+      "tenant": "المستأجر",
+      "all": "جميع أوامر العمل",
+      "open": "مفتوحة",
+      "pending": "قيد الانتظار",
+      "inProgress": "قيد التنفيذ",
+      "completed": "مكتملة",
+      "closed": "مغلقة",
+      "cancelled": "ملغاة",
+      "board": {
+        "title": "لوحة أوامر العمل",
+        "description": "تتبع وتعيين أوامر العمل عبر جميع العقارات"
+      },
+      "history": {
+        "title": "سجل أوامر العمل"
+      },
+      "pm": {
+        "title": "الصيانة الوقائية"
+      },
+      "sla": {
+        "title": "مراقبة اتفاقية مستوى الخدمة"
+      }
+    },
+    "properties": {
+      "title": "العقارات",
+      "create": "إضافة عقار",
+      "view": "عرض العقارات",
+      "edit": "تعديل عقار",
+      "delete": "حذف عقار",
+      "name": "اسم العقار",
+      "type": "نوع العقار",
+      "address": "العنوان",
+      "units": "الوحدات",
+      "totalUnits": "إجمالي الوحدات",
+      "occupiedUnits": "الوحدات المشغولة",
+      "vacantUnits": "الوحدات الشاغرة",
+      "owner": "المالك",
+      "manager": "المدير",
+      "status": "الحالة",
+      "all": "جميع العقارات",
+      "residential": "سكني",
+      "commercial": "تجاري",
+      "mixed": "مختلط",
+      "details": "تفاصيل العقار"
+    },
+    "assets": {
+      "title": "الأصول",
+      "create": "إضافة أصل",
+      "view": "عرض الأصول",
+      "edit": "تعديل أصل",
+      "delete": "حذف أصل",
+      "name": "اسم الأصل",
+      "category": "الفئة",
+      "serialNumber": "الرقم التسلسلي",
+      "purchaseDate": "تاريخ الشراء",
+      "warranty": "الضمان",
+      "condition": "الحالة",
+      "location": "الموقع",
+      "all": "جميع الأصول"
+    },
+    "tenants": {
+      "title": "المستأجرون",
+      "create": "إضافة مستأجر",
+      "view": "عرض المستأجرين",
+      "edit": "تعديل مستأجر",
+      "delete": "حذف مستأجر",
+      "name": "اسم المستأجر",
+      "email": "البريد الإلكتروني",
+      "phone": "الهاتف",
+      "unit": "الوحدة",
+      "leaseStart": "بداية الإيجار",
+      "leaseEnd": "نهاية الإيجار",
+      "rent": "الإيجار",
+      "deposit": "التأمين",
+      "status": "الحالة",
+      "all": "جميع المستأجرين",
+      "active": "نشط",
+      "inactive": "غير نشط"
+    },
+    "vendors": {
+      "title": "الموردون",
+      "create": "إضافة مورد",
+      "view": "عرض الموردين",
+      "edit": "تعديل مورد",
+      "delete": "حذف مورد",
+      "name": "اسم المورد",
+      "email": "البريد الإلكتروني",
+      "phone": "الهاتف",
+      "category": "الفئة",
+      "rating": "التقييم",
+      "status": "الحالة",
+      "all": "جميع الموردين",
+      "approved": "معتمد",
+      "pending": "قيد المراجعة",
+      "rejected": "مرفوض"
+    },
+    "projects": {
+      "title": "المشاريع",
+      "create": "إنشاء مشروع",
+      "view": "عرض المشاريع",
+      "edit": "تعديل مشروع",
+      "delete": "حذف مشروع",
+      "name": "اسم المشروع",
+      "description": "الوصف",
+      "startDate": "تاريخ البدء",
+      "endDate": "تاريخ الانتهاء",
+      "budget": "الميزانية",
+      "spent": "المصروف",
+      "status": "الحالة",
+      "all": "جميع المشاريع"
+    },
+    "rfqs": {
+      "title": "طلبات عروض الأسعار",
+      "create": "إنشاء طلب عرض سعر",
+      "view": "عرض طلبات عروض الأسعار",
+      "edit": "تعديل طلب عرض سعر",
+      "delete": "حذف طلب عرض سعر",
+      "rfqNumber": "رقم الطلب",
+      "title": "العنوان",
+      "description": "الوصف",
+      "deadline": "الموعد النهائي",
+      "status": "الحالة",
+      "bids": "العروض",
+      "all": "جميع الطلبات",
+      "open": "مفتوح",
+      "closed": "مغلق",
+      "awarded": "تم الإرساء"
+    },
+    "invoices": {
+      "title": "الفواتير",
+      "create": "إنشاء فاتورة",
+      "view": "عرض الفواتير",
+      "edit": "تعديل فاتورة",
+      "delete": "حذف فاتورة",
+      "invoiceNumber": "رقم الفاتورة",
+      "date": "التاريخ",
+      "dueDate": "تاريخ الاستحقاق",
+      "amount": "المبلغ",
+      "paid": "مدفوع",
+      "outstanding": "مستحق",
+      "status": "الحالة",
+      "all": "جميع الفواتير",
+      "draft": "مسودة",
+      "sent": "مرسلة",
+      "overdue": "متأخرة"
+    },
+    "common": {
+      "search": "بحث",
+      "filter": "تصفية",
+      "export": "تصدير",
+      "import": "استيراد",
+      "refresh": "تحديث",
+      "add": "إضافة",
+      "edit": "تعديل",
+      "delete": "حذف",
+      "save": "حفظ",
+      "cancel": "إلغاء",
+      "submit": "إرسال",
+      "back": "رجوع",
+      "next": "التالي",
+      "previous": "السابق",
+      "loading": "جاري التحميل...",
+      "noData": "لا توجد بيانات",
+      "error": "خطأ",
+      "success": "نجاح",
+      "warning": "تحذير",
+      "info": "معلومات",
+      "confirm": "تأكيد",
+      "yes": "نعم",
+      "no": "لا",
+      "select": "اختر",
+      "selectAll": "تحديد الكل",
+      "clearAll": "مسح الكل",
+      "actions": "الإجراءات"
+    }
   }
 }
