--- a/i18n/en.json
+++ b/i18n/en.json
@@ -780,5 +780,195 @@
     "obj": "Object test",
     "watch-all": "Watch all",
     "welcome": "Welcome"
+  },
+  "fm": {
+    "title": "Facility Management",
+    "dashboard": "Dashboard",
+    "workOrders": {
+      "title": "Work Orders",
+      "create": "Create Work Order",
+      "view": "View Work Orders",
+      "edit": "Edit Work Order",
+      "delete": "Delete Work Order",
+      "status": "Status",
+      "priority": "Priority",
+      "assignedTo": "Assigned To",
+      "dueDate": "Due Date",
+      "description": "Description",
+      "property": "Property",
+      "tenant": "Tenant",
+      "all": "All Work Orders",
+      "open": "Open",
+      "pending": "Pending",
+      "inProgress": "In Progress",
+      "completed": "Completed",
+      "closed": "Closed",
+      "cancelled": "Cancelled",
+      "board": {
+        "title": "Work Orders Board",
+        "description": "Track and assign work orders across all properties"
+      },
+      "history": {
+        "title": "Work Order History"
+      },
+      "pm": {
+        "title": "Preventive Maintenance"
+      },
+      "sla": {
+        "title": "SLA Monitoring"
+      }
+    },
+    "properties": {
+      "title": "Properties",
+      "create": "Add Property",
+      "view": "View Properties",
+      "edit": "Edit Property",
+      "delete": "Delete Property",
+      "name": "Property Name",
+      "type": "Property Type",
+      "address": "Address",
+      "units": "Units",
+      "totalUnits": "Total Units",
+      "occupiedUnits": "Occupied Units",
+      "vacantUnits": "Vacant Units",
+      "owner": "Owner",
+      "manager": "Manager",
+      "status": "Status",
+      "all": "All Properties",
+      "residential": "Residential",
+      "commercial": "Commercial",
+      "mixed": "Mixed",
+      "details": "Property Details"
+    },
+    "assets": {
+      "title": "Assets",
+      "create": "Add Asset",
+      "view": "View Assets",
+      "edit": "Edit Asset",
+      "delete": "Delete Asset",
+      "name": "Asset Name",
+      "category": "Category",
+      "serialNumber": "Serial Number",
+      "purchaseDate": "Purchase Date",
+      "warranty": "Warranty",
+      "condition": "Condition",
+      "location": "Location",
+      "all": "All Assets"
+    },
+    "tenants": {
+      "title": "Tenants",
+      "create": "Add Tenant",
+      "view": "View Tenants",
+      "edit": "Edit Tenant",
+      "delete": "Delete Tenant",
+      "name": "Tenant Name",
+      "email": "Email",
+      "phone": "Phone",
+      "unit": "Unit",
+      "leaseStart": "Lease Start",
+      "leaseEnd": "Lease End",
+      "rent": "Rent",
+      "deposit": "Deposit",
+      "status": "Status",
+      "all": "All Tenants",
+      "active": "Active",
+      "inactive": "Inactive"
+    },
+    "vendors": {
+      "title": "Vendors",
+      "create": "Add Vendor",
+      "view": "View Vendors",
+      "edit": "Edit Vendor",
+      "delete": "Delete Vendor",
+      "name": "Vendor Name",
+      "email": "Email",
+      "phone": "Phone",
+      "category": "Category",
+      "rating": "Rating",
+      "status": "Status",
+      "all": "All Vendors",
+      "approved": "Approved",
+      "pending": "Pending",
+      "rejected": "Rejected"
+    },
+    "projects": {
+      "title": "Projects",
+      "create": "Create Project",
+      "view": "View Projects",
+      "edit": "Edit Project",
+      "delete": "Delete Project",
+      "name": "Project Name",
+      "description": "Description",
+      "startDate": "Start Date",
+      "endDate": "End Date",
+      "budget": "Budget",
+      "spent": "Spent",
+      "status": "Status",
+      "all": "All Projects"
+    },
+    "rfqs": {
+      "title": "RFQs",
+      "create": "Create RFQ",
+      "view": "View RFQs",
+      "edit": "Edit RFQ",
+      "delete": "Delete RFQ",
+      "rfqNumber": "RFQ Number",
+      "title": "Title",
+      "description": "Description",
+      "deadline": "Deadline",
+      "status": "Status",
+      "bids": "Bids",
+      "all": "All RFQs",
+      "open": "Open",
+      "closed": "Closed",
+      "awarded": "Awarded"
+    },
+    "invoices": {
+      "title": "Invoices",
+      "create": "Create Invoice",
+      "view": "View Invoices",
+      "edit": "Edit Invoice",
+      "delete": "Delete Invoice",
+      "invoiceNumber": "Invoice Number",
+      "date": "Date",
+      "dueDate": "Due Date",
+      "amount": "Amount",
+      "paid": "Paid",
+      "outstanding": "Outstanding",
+      "status": "Status",
+      "all": "All Invoices",
+      "draft": "Draft",
+      "sent": "Sent",
+      "overdue": "Overdue"
+    },
+    "common": {
+      "search": "Search",
+      "filter": "Filter",
+      "export": "Export",
+      "import": "Import",
+      "refresh": "Refresh",
+      "add": "Add",
+      "edit": "Edit",
+      "delete": "Delete",
+      "save": "Save",
+      "cancel": "Cancel",
+      "submit": "Submit",
+      "back": "Back",
+      "next": "Next",
+      "previous": "Previous",
+      "loading": "Loading...",
+      "noData": "No data",
+      "error": "Error",
+      "success": "Success",
+      "warning": "Warning",
+      "info": "Info",
+      "confirm": "Confirm",
+      "yes": "Yes",
+      "no": "No",
+      "select": "Select",
+      "selectAll": "Select All",
+      "clearAll": "Clear All",
+      "actions": "Actions"
+    }
   }
 }
