--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -140,35 +140,18 @@
     }
   },
   "admin": {
-    "title": "الإدارة",
-    "signInRequired": "يجب تسجيل الدخول",
-    "accessDenied": "تم رفض الوصول",
-    "insufficientPerms": "صلاحيات غير كافية",
-    "superAdminRequired": "يتطلب صلاحيات مدير عام",
-    "currentRole": "الدور الحالي",
-    "console": "لوحة التحكم الإدارية",
-    "consoleDesc": "إدارة المستخدمين والأدوار وإعدادات النظام",
-    "tabs": {
-      "overview": "نظرة عامة",
-      "users": "المستخدمون",
-      "roles": "الأدوار والصلاحيات",
-      "audit": "سجلات المراجعة",
-      "features": "علامات الميزات"
-    },
-    "overview": {
-      "title": "نظرة عامة إدارية",
-      "quickLinks": "روابط سريعة",
-      "manageUsers": "إدارة المستخدمين",
-      "manageRoles": "إدارة الأدوار",
-      "viewLogs": "عرض سجلات المراجعة",
-      "featureSettings": "إعدادات الميزات"
+    "administration": {
+      "title": "إدارة النظام",
+      "subtitle": "إدارة جميع جوانب منصة فكس إت"
     },
     "users": {
       "title": "إدارة المستخدمين",
       "description": "إدارة المستخدمين والأدوار والصلاحيات",
       "totalUsers": "إجمالي المستخدمين",
-      "activeUsers": "المستخدمون النشطون",
+      "createUser": "إنشاء مستخدم",
+      "active": "المستخدمون النشطون",
       "online": "متصل الآن",
+      "activeUsers": "المستخدمون النشطون",
       "creating": "جاري إنشاء المستخدم...",
       "createFailed": "فشل إنشاء المستخدم",
       "createSuccess": "تم إنشاء المستخدم بنجاح",
@@ -177,7 +160,6 @@
       "deleteFailed": "فشل حذف المستخدم",
       "deleteSuccess": "تم حذف المستخدم بنجاح",
       "exportCsv": "تصدير إلى CSV",
-      "createUser": "إنشاء مستخدم",
       "createNewUser": "إنشاء مستخدم جديد",
       "email": "البريد الإلكتروني",
       "username": "اسم المستخدم",
@@ -209,10 +191,10 @@
       "assignedUsers": "المستخدمون المعينون"
     },
     "audit": {
-      "title": "سجلات المراجعة",
+      "title": "سجلات التدقيق",
       "description": "عرض نشاط النظام وسجلات الامتثال",
       "recentEvents": "الأحداث الأخيرة",
-      "viewLogs": "عرض سجلات المراجعة",
+      "viewLogs": "عرض سجلات التدقيق",
       "action": "الإجراء",
       "user": "المستخدم",
       "timestamp": "الوقت",
@@ -235,8 +217,9 @@
       "categories": "الفئات"
     },
     "features": {
-      "title": "علامات الميزات",
-      "description": "تمكين/تعطيل الميزات ديناميكيًا",
+      "title": "أعلام الميزات",
+      "description": "تمكين / تعطيل الميزات ديناميكيًا",
+      "active": "الميزات النشطة",
       "activeFeatures": "الميزات النشطة",
       "enabled": "مفعّل",
       "disabled": "معطّل",
@@ -244,7 +227,7 @@
     },
     "database": {
       "title": "إدارة قاعدة البيانات",
-      "description": "مراقبة صحة وأداء قاعدة البيانات",
+      "description": "مراقبة صحة قاعدة البيانات والأداء",
       "status": "الحالة",
       "healthy": "سليم"
     },
@@ -269,22 +252,68 @@
       "uptime": "وقت التشغيل"
     },
     "reports": {
-      "title": "تقارير الإدارة",
-      "description": "إنشاء تقارير وتحليلات على مستوى الإدارة",
+      "title": "تقارير المسؤول",
+      "description": "إنشاء تقارير وتحليلات على مستوى المسؤول",
       "generated": "تم الإنشاء"
-    },
-    "administration": {
-      "title": "إدارة النظام",
-      "subtitle": "إدارة جميع جوانب منصة فكس إت"
     },
     "system": {
       "status": "النظام",
-      "operational": "قيد التشغيل",
+      "operational": "تشغيلي",
       "monitor": "مراقب النظام"
+    },
+    "title": "الإدارة",
+    "signInRequired": "يجب تسجيل الدخول",
+    "accessDenied": "تم رفض الوصول",
+    "insufficientPerms": "صلاحيات غير كافية",
+    "superAdminRequired": "يتطلب صلاحيات مدير عام",
+    "currentRole": "الدور الحالي",
+    "console": "لوحة التحكم الإدارية",
+    "consoleDesc": "إدارة المستخدمين والأدوار وإعدادات النظام",
+    "tabs": {
+      "overview": "نظرة عامة",
+      "users": "المستخدمون",
+      "roles": "الأدوار والصلاحيات",
+      "audit": "سجلات المراجعة",
+      "features": "علامات الميزات"
+    },
+    "overview": {
+      "title": "نظرة عامة إدارية",
+      "quickLinks": "روابط سريعة",
+      "manageUsers": "إدارة المستخدمين",
+      "manageRoles": "إدارة الأدوار",
+      "viewLogs": "عرض سجلات المراجعة",
+      "featureSettings": "إعدادات الميزات"
     }
   },
   "dashboard": {
-    "title": "لوحة التحكم",
+    "title": "لوحة القيادة",
+    "welcomeBack": "مرحبًا بعودتك",
+    "notifications": "الإشعارات",
+    "quickAction": "إجراء سريع",
+    "quickActions": "الإجراءات السريعة",
+    "activeWorkOrders": "أوامر العمل النشطة",
+    "totalProperties": "إجمالي العقارات",
+    "assetsUnderMaintenance": "الأصول قيد الصيانة",
+    "overdueInvoices": "الفواتير المتأخرة",
+    "pending": "قيد الانتظار",
+    "overdue": "متأخر",
+    "occupied": "مشغول",
+    "needAttention": "بحاجة إلى انتباه",
+    "manage": "إدارة",
+    "criticalAssets": "الأصول الحرجة",
+    "viewAssets": "عرض الأصول",
+    "sarPending": "ريال قيد الانتظار",
+    "viewInvoices": "عرض الفواتير",
+    "recentWorkOrders": "أوامر العمل الأخيرة",
+    "viewAll": "عرض الكل",
+    "noRecentWorkOrders": "لا توجد أوامر عمل حديثة",
+    "propertyAlerts": "تنبيهات العقار",
+    "units": "وحدات",
+    "noProperties": "لا توجد عقارات",
+    "newWorkOrder": "أمر عمل جديد",
+    "addProperty": "إضافة عقار",
+    "newTenant": "مستأجر جديد",
+    "createInvoice": "إنشاء فاتورة",
     "welcome": "مرحبًا بك مرة أخرى",
     "metrics": {
       "properties": "العقارات",
@@ -292,8 +321,7 @@
       "tenants": "المستأجرون",
       "vendors": "الموردون"
     },
-    "recentActivity": "النشاط الأخير",
-    "quickActions": "إجراءات سريعة"
+    "recentActivity": "النشاط الأخير"
   },
   "workOrders": {
     "title": "أوامر العمل",
@@ -322,6 +350,9 @@
     }
   },
   "properties": {
+    "leases": {
+      "active": "نشط"
+    },
     "title": "العقارات",
     "create": "إضافة عقار",
     "fields": {
@@ -375,6 +406,23 @@
     }
   },
   "hr": {
+    "stats": {
+      "totalEmployees": "إجمالي الموظفين",
+      "monthlyPayroll": "كشوف المرتبات الشهرية",
+      "pendingLeave": "طلبات الإجازة المعلقة",
+      "attendance": "الحضور اليوم"
+    },
+    "quickActions": "إجراءات سريعة",
+    "actions": {
+      "addEmployee": "إضافة موظف",
+      "addEmployeeDesc": "تسجيل موظف جديد",
+      "processPayroll": "معالجة كشوف المرتبات",
+      "processPayrollDesc": "تشغيل كشوف المرتبات الشهرية",
+      "approveLeave": "الموافقة على الإجازة",
+      "approveLeaveDesc": "مراجعة طلبات الإجازة"
+    },
+    "recentActivity": "النشاط الأخير",
+    "comingSoon": "سيظهر النشاط الأخير هنا...",
     "title": "الموارد البشرية",
     "tabs": {
       "dashboard": "لوحة التحكم",
@@ -382,24 +430,7 @@
       "payroll": "كشوف المرتبات",
       "leave": "إدارة الإجازات",
       "attendance": "الحضور"
-    },
-    "stats": {
-      "totalEmployees": "إجمالي الموظفين",
-      "monthlyPayroll": "الرواتب الشهرية",
-      "pendingLeave": "طلبات الإجازة المعلقة",
-      "attendance": "معدل الحضور"
-    },
-    "quickActions": "إجراءات سريعة",
-    "actions": {
-      "addEmployee": "إضافة موظف",
-      "addEmployeeDesc": "تسجيل موظف جديد",
-      "processPayroll": "معالجة الرواتب",
-      "processPayrollDesc": "تشغيل الرواتب الشهرية",
-      "approveLeave": "الموافقة على الإجازة",
-      "approveLeaveDesc": "مراجعة طلبات الإجازات"
-    },
-    "recentActivity": "النشاط الأخير",
-    "comingSoon": "قريبًا"
+    }
   },
   "crm": {
     "title": "إدارة علاقات العملاء",
@@ -417,6 +448,7 @@
     "rfq": "طلب عرض سعر"
   },
   "vendors": {
+    "description": "إدارة علاقات الموردين ومقدمي الخدمات",
     "title": "الموردون",
     "add": "إضافة مورد",
     "list": "قائمة الموردين",
@@ -433,9 +465,12 @@
     "requests": "طلبات الصيانة"
   },
   "maintenance": {
-    "title": "الصيانة",
-    "description": "إدارة مهام وجداول الصيانة",
+    "description": "إدارة جداول الصيانة والمهام",
     "tasks": "مهام الصيانة",
+    "asset": "الأصل",
+    "due": "الاستحقاق",
+    "assigned": "مُسند إلى",
+    "title": "الصيانة",
     "schedule": "جدول الصيانة",
     "history": "تاريخ الصيانة",
     "preventive": "الصيانة الوقائية"
@@ -542,6 +577,14 @@
     }
   },
   "common": {
+    "search": "بحث...",
+    "all": "جميع الحالات",
+    "export": "تصدير",
+    "view": "عرض",
+    "edit": "تعديل",
+    "delete": "حذف",
+    "loading": "جارٍ التحميل...",
+    "user": "المستخدم",
     "brand": "فكس إت",
     "backToHome": "العودة للصفحة الرئيسية",
     "signIn": "تسجيل الدخول",
@@ -555,14 +598,8 @@
     "preferences": "التفضيلات",
     "save": "حفظ",
     "cancel": "إلغاء",
-    "delete": "حذف",
-    "edit": "تعديل",
-    "view": "عرض",
-    "search": "بحث",
     "filter": "تصفية",
-    "export": "تصدير",
     "import": "استيراد",
-    "loading": "جاري التحميل...",
     "error": "خطأ",
     "success": "نجح",
     "confirm": "تأكيد",
@@ -619,6 +656,9 @@
     "searchableEntities": "عناصر قابلة للبحث"
   },
   "nav": {
+    "orders": "الطلبات وأوامر الشراء",
+    "maintenance": "الصيانة",
+    "vendors": "الموردون",
     "home": "الرئيسية",
     "dashboard": "لوحة التحكم",
     "properties": "العقارات",
@@ -626,7 +666,6 @@
     "workOrders": "أوامر العمل",
     "assets": "الأصول",
     "tenants": "المستأجرون",
-    "vendors": "الموردون",
     "projects": "المشاريع",
     "rfqs": "طلبات الأسعار",
     "invoices": "الفواتير",
@@ -639,8 +678,6 @@
     "reports": "التقارير",
     "system": "النظام",
     "administration": "الإدارة",
-    "maintenance": "الصيانة",
-    "orders": "الطلبات",
     "settings": "الإعدادات",
     "help": "المساعدة",
     "logout": "تسجيل الخروج",
@@ -655,9 +692,9 @@
     "dAgo": "ي"
   },
   "sidebar": {
+    "role": "الدور",
     "mainNav": "القائمة الرئيسية",
     "accountInfo": "معلومات الحساب",
-    "role": "الدور",
     "planLabel": "الخطة",
     "modules": "الوحدات",
     "noModules": "لا توجد وحدات متاحة لدورك/خطتك",
@@ -782,6 +819,65 @@
     "welcome": "مرحباً بك"
   },
   "fm": {
+    "tenants": {
+      "title": "إدارة المستأجرين",
+      "subtitle": "إدارة علاقات العملاء والعقود",
+      "newTenant": "مستأجر جديد",
+      "addTenant": "إضافة مستأجر جديد",
+      "searchTenants": "البحث عن مستأجرين...",
+      "tenantType": "نوع المستأجر",
+      "individual": "فرد",
+      "company": "شركة",
+      "government": "حكومة",
+      "noTenants": "لم يتم العثور على مستأجرين",
+      "noTenantsText": "ابدأ بإضافة أول مستأجر",
+      "properties": "العقارات",
+      "leaseStatus": "حالة العقد",
+      "noActiveLeases": "لا توجد عقود نشطة",
+      "outstandingBalance": "الرصيد المستحق",
+      "tenantName": "اسم المستأجر",
+      "primaryContactName": "اسم جهة الاتصال الرئيسية",
+      "email": "البريد الإلكتروني",
+      "create": "إضافة مستأجر",
+      "view": "عرض المستأجرين",
+      "edit": "تعديل مستأجر",
+      "delete": "حذف مستأجر",
+      "name": "اسم المستأجر",
+      "phone": "الهاتف",
+      "unit": "الوحدة",
+      "leaseStart": "بداية الإيجار",
+      "leaseEnd": "نهاية الإيجار",
+      "rent": "الإيجار",
+      "deposit": "التأمين",
+      "status": "الحالة",
+      "all": "جميع المستأجرين",
+      "active": "نشط",
+      "inactive": "غير نشط"
+    },
+    "properties": {
+      "allTypes": "جميع الأنواع",
+      "type": "النوع",
+      "selectType": "اختر النوع",
+      "title": "العقارات",
+      "create": "إضافة عقار",
+      "view": "عرض العقارات",
+      "edit": "تعديل عقار",
+      "delete": "حذف عقار",
+      "name": "اسم العقار",
+      "address": "العنوان",
+      "units": "الوحدات",
+      "totalUnits": "إجمالي الوحدات",
+      "occupiedUnits": "الوحدات المشغولة",
+      "vacantUnits": "الوحدات الشاغرة",
+      "owner": "المالك",
+      "manager": "المدير",
+      "status": "الحالة",
+      "all": "جميع العقارات",
+      "residential": "سكني",
+      "commercial": "تجاري",
+      "mixed": "مختلط",
+      "details": "تفاصيل العقار"
+    },
     "title": "إدارة المرافق",
     "dashboard": "لوحة التحكم",
     "workOrders": {
@@ -818,28 +914,6 @@
         "title": "مراقبة اتفاقية مستوى الخدمة"
       }
     },
-    "properties": {
-      "title": "العقارات",
-      "create": "إضافة عقار",
-      "view": "عرض العقارات",
-      "edit": "تعديل عقار",
-      "delete": "حذف عقار",
-      "name": "اسم العقار",
-      "type": "نوع العقار",
-      "address": "العنوان",
-      "units": "الوحدات",
-      "totalUnits": "إجمالي الوحدات",
-      "occupiedUnits": "الوحدات المشغولة",
-      "vacantUnits": "الوحدات الشاغرة",
-      "owner": "المالك",
-      "manager": "المدير",
-      "status": "الحالة",
-      "all": "جميع العقارات",
-      "residential": "سكني",
-      "commercial": "تجاري",
-      "mixed": "مختلط",
-      "details": "تفاصيل العقار"
-    },
     "assets": {
       "title": "الأصول",
       "create": "إضافة أصل",
@@ -854,25 +928,6 @@
       "condition": "الحالة",
       "location": "الموقع",
       "all": "جميع الأصول"
-    },
-    "tenants": {
-      "title": "المستأجرون",
-      "create": "إضافة مستأجر",
-      "view": "عرض المستأجرين",
-      "edit": "تعديل مستأجر",
-      "delete": "حذف مستأجر",
-      "name": "اسم المستأجر",
-      "email": "البريد الإلكتروني",
-      "phone": "الهاتف",
-      "unit": "الوحدة",
-      "leaseStart": "بداية الإيجار",
-      "leaseEnd": "نهاية الإيجار",
-      "rent": "الإيجار",
-      "deposit": "التأمين",
-      "status": "الحالة",
-      "all": "جميع المستأجرين",
-      "active": "نشط",
-      "inactive": "غير نشط"
     },
     "vendors": {
       "title": "الموردون",
@@ -907,13 +962,12 @@
       "all": "جميع المشاريع"
     },
     "rfqs": {
-      "title": "طلبات عروض الأسعار",
+      "title": "العنوان",
       "create": "إنشاء طلب عرض سعر",
       "view": "عرض طلبات عروض الأسعار",
       "edit": "تعديل طلب عرض سعر",
       "delete": "حذف طلب عرض سعر",
       "rfqNumber": "رقم الطلب",
-      "title": "العنوان",
       "description": "الوصف",
       "deadline": "الموعد النهائي",
       "status": "الحالة",
@@ -970,5 +1024,34 @@
       "clearAll": "مسح الكل",
       "actions": "الإجراءات"
     }
+  },
+  "orders": {
+    "pageDescription": "إدارة أوامر الشراء وطلبات الخدمة",
+    "tabs": {
+      "purchase": "أوامر الشراء",
+      "service": "طلبات الخدمة"
+    }
+  },
+  "order": {
+    "vendor": "المورد",
+    "date": "تاريخ الطلب",
+    "total": "الإجمالي",
+    "items": "العناصر",
+    "delivery": "التسليم",
+    "amount": "المبلغ"
+  },
+  "vendor": {
+    "type": "النوع",
+    "services": "الخدمات",
+    "code": "الرمز"
+  },
+  "status": {
+    "draft": "مسودة",
+    "submitted": "مُقدَّم",
+    "approved": "موافق عليه",
+    "completed": "مكتمل",
+    "pending": "قيد الانتظار",
+    "suspended": "معلق",
+    "rejected": "مرفوض"
   }
 }
