--- a/i18n/en.json
+++ b/i18n/en.json
@@ -372,7 +372,7 @@
     "category": {
       "operational": "Operational",
       "maintenance": "Maintenance",
-      "maintenance_repair": "Maintenance & Repairs",
+      "maintenanceRepair": "Maintenance & Repairs",
       "capital": "Capital",
       "utility": "Utility",
       "utilities": "Utilities",
