feat: add interview filter translations for HR recruitment
- Add English translations for interview status filters (All Status, Scheduled, Completed, Cancelled, No Show)
- Add English translations for interview stage filters (All Stages, Screening, Technical, HR Round, Final Round, Panel)
- Add corresponding Arabic translations for all interview filters
- Update recruitment page to use auto() translation function for dropdown options
- Regenerate JSON dictionaries to include new translation keys

--- a/docs/translations/translation-audit.json
+++ b/docs/translations/translation-audit.json
@@ -1,10 +1,10 @@
 {
   "stats": {
     "files": 652,
-    "usedKeys": 2491,
+    "usedKeys": 2495,
     "hasDynamic": true,
-    "enCount": 3761,
-    "arCount": 3761,
+    "enCount": 3784,
+    "arCount": 3784,
     "parityGap": 0
   },
   "missing": {
@@ -31,6 +31,7 @@
       "/Users/eng.sultanalhassni/Downloads/Fixzit/Fixzit/app/marketplace/admin/page.tsx",
       "/Users/eng.sultanalhassni/Downloads/Fixzit/Fixzit/app/marketplace/orders/page.tsx",
       "/Users/eng.sultanalhassni/Downloads/Fixzit/Fixzit/app/reports/page.tsx",
+      "/Users/eng.sultanalhassni/Downloads/Fixzit/Fixzit/app/work-orders/history/page.tsx",
       "/Users/eng.sultanalhassni/Downloads/Fixzit/Fixzit/hooks/usePageLabels.ts"
     ],
     "about.metaTitle": [
@@ -272,6 +273,9 @@
     "admin.logo.currentLogo": [
       "/Users/eng.sultanalhassni/Downloads/Fixzit/Fixzit/app/admin/logo/page.tsx"
     ],
+    "admin.logo.currentLogoAlt": [
+      "/Users/eng.sultanalhassni/Downloads/Fixzit/Fixzit/app/admin/logo/page.tsx"
+    ],
     "admin.logo.visibleInTopBar": [
       "/Users/eng.sultanalhassni/Downloads/Fixzit/Fixzit/app/admin/logo/page.tsx"
     ],
@@ -279,6 +283,9 @@
       "/Users/eng.sultanalhassni/Downloads/Fixzit/Fixzit/app/admin/logo/page.tsx"
     ],
     "admin.logo.uploadLogo": [
+      "/Users/eng.sultanalhassni/Downloads/Fixzit/Fixzit/app/admin/logo/page.tsx"
+    ],
+    "admin.logo.previewAlt": [
       "/Users/eng.sultanalhassni/Downloads/Fixzit/Fixzit/app/admin/logo/page.tsx"
     ],
     "admin.logo.uploadButton": [
@@ -5603,6 +5610,14 @@
     "common.totalCost": [
       "/Users/eng.sultanalhassni/Downloads/Fixzit/Fixzit/app/work-orders/history/page.tsx"
     ],
+    "workOrders.history.filters.fromDate": [
+      "/Users/eng.sultanalhassni/Downloads/Fixzit/Fixzit/app/work-orders/history/page.tsx",
+      "/Users/eng.sultanalhassni/Downloads/Fixzit/Fixzit/app/work-orders/history/page.tsx"
+    ],
+    "workOrders.history.filters.toDate": [
+      "/Users/eng.sultanalhassni/Downloads/Fixzit/Fixzit/app/work-orders/history/page.tsx",
+      "/Users/eng.sultanalhassni/Downloads/Fixzit/Fixzit/app/work-orders/history/page.tsx"
+    ],
     "common.exportCsv": [
       "/Users/eng.sultanalhassni/Downloads/Fixzit/Fixzit/app/work-orders/history/page.tsx",
       "/Users/eng.sultanalhassni/Downloads/Fixzit/Fixzit/components/finance/TrialBalanceReport.tsx"
@@ -7921,5 +7936,5 @@
       "/Users/eng.sultanalhassni/Downloads/Fixzit/Fixzit/components/ui/pagination.tsx"
     ]
   },
-  "timestamp": "2025-11-18T05:32:08.856Z"
+  "timestamp": "2025-11-18T05:55:44.400Z"
 }
