--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -66,6 +66,12 @@
     "phone": "رقم الهاتف",
     "phoneLabel": "هاتفك"
   },
+  "careers": {
+    "uploadFailed": "فشل تحميل السيرة الذاتية",
+    "presignFailed": "فشل الحصول على رابط التحميل",
+    "resumeUploadNote": "يرجى تحميل سيرتك الذاتية بصيغة PDF (بحد أقصى 5 ميجابايت)",
+    "resumeScanStatus": "جاري فحص السيرة الذاتية من الفيروسات..."
+  },
   "auth": {
     "login": {
       "title": "تسجيل الدخول",
@@ -118,7 +124,8 @@
     },
     "logout": {
       "signingOut": "جاري تسجيل الخروج...",
-      "pleaseWait": "يرجى الانتظار"
+      "pleaseWait": "يرجى الانتظار",
+      "redirectingAfterError": "إعادة التوجيه بعد حدوث خطأ..."
     },
     "signup": {
       "title": "إنشاء حساب",
@@ -374,6 +381,7 @@
   },
   "workOrders": {
     "title": "أوامر العمل",
+    "attachmentsCount": "{{count}} مرفق(ات)",
     "create": {
       "button": "أمر عمل جديد",
       "title": "إنشاء أمر العمل",
@@ -387,6 +395,12 @@
         "cancelButton": "يلغي",
         "submitButton": "يخلق"
       }
+    },
+    "new": {
+      "requiredFields": "يرجى ملء جميع الحقول المطلوبة",
+      "success": "تم إنشاء أمر العمل بنجاح",
+      "woNumber": "أمر العمل #{{number}}",
+      "uploadHint": "اسحب وأفلت الملفات هنا، أو انقر للتصفح"
     },
     "status": {
       "open": "مفتوح",
@@ -682,7 +696,45 @@
     "search": "ابحث في المقالات",
     "categories": "الفئات",
     "popular": "المقالات الشائعة",
-    "getStarted": "البدء"
+    "getStarted": "البدء",
+    "article": {
+      "comments": {
+        "title": "التعليقات",
+        "placeholder": "اكتب تعليقك...",
+        "submit": "نشر التعليق",
+        "success": "تم نشر التعليق بنجاح",
+        "error": "فشل نشر التعليق",
+        "auth": "يرجى تسجيل الدخول للتعليق"
+      }
+    }
+  },
+  "helpCenterV2": {
+    "title": "مركز المساعدة",
+    "subtitle": "ابحث عن إجابات واحصل على الدعم",
+    "askAssistant": "اسأل المساعد الذكي",
+    "createTicket": "إنشاء تذكرة دعم",
+    "viewTickets": "عرض تذاكري",
+    "interactiveTutorials": "دروس تفاعلية",
+    "interactiveSubtitle": "دروس إرشادية خطوة بخطوة",
+    "viewAllTutorials": "عرض جميع الدروس",
+    "helpArticles": "مقالات المساعدة",
+    "articlesSubtitle": "تصفح قاعدة المعرفة",
+    "readMore": "اقرأ المزيد",
+    "emptyArticles": "لم يتم العثور على مقالات",
+    "updated": "تم التحديث {{date}}",
+    "loadingArticles": "جاري تحميل المقالات...",
+    "generalCategory": "عام",
+    "systemOverview": "نظرة عامة على النظام",
+    "overviewSubtitle": "تعرف على الميزات الأساسية لـ فيكزت",
+    "propertiesTitle": "العقارات",
+    "propertiesCopy": "إدارة محفظة العقارات الخاصة بك",
+    "workOrdersTitle": "أوامر العمل",
+    "workOrdersCopy": "تتبع وإدارة طلبات الصيانة",
+    "vendorsTitle": "الموردون",
+    "vendorsCopy": "التنسيق مع مزودي الخدمات",
+    "financeTitle": "الماليات",
+    "financeCopy": "إدارة الفواتير والنفقات",
+    "untitledArticle": "مقالة بدون عنوان"
   },
   "souq": {
     "search": {
@@ -874,6 +926,7 @@
     "reports": "التقارير",
     "system": "النظام",
     "administration": "الإدارة",
+    "admin": "الإدارة",
     "settings": "الإعدادات",
     "help": "المساعدة",
     "logout": "تسجيل الخروج",
@@ -1093,7 +1146,19 @@
       "residential": "سكني",
       "commercial": "تجاري",
       "mixed": "مختلط",
-      "details": "تفاصيل العقار"
+      "details": "تفاصيل العقار",
+      "detail": {
+        "errors": {
+          "noPropertyId": "معرف العقار مطلوب"
+        }
+      }
+    },
+    "vendors": {
+      "detail": {
+        "errors": {
+          "noVendorId": "معرف المورد مطلوب"
+        }
+      }
     },
     "title": "إدارة المرافق",
     "dashboard": "لوحة التحكم",
