--- a/i18n/en.json
+++ b/i18n/en.json
@@ -66,6 +66,12 @@
     "phone": "Phone Number",
     "phoneLabel": "Your Phone"
   },
+  "careers": {
+    "uploadFailed": "Failed to upload resume",
+    "presignFailed": "Failed to get upload URL",
+    "resumeUploadNote": "Please upload your resume in PDF format (max 5MB)",
+    "resumeScanStatus": "Scanning resume for viruses..."
+  },
   "auth": {
     "login": {
       "title": "Sign In",
@@ -118,7 +124,8 @@
     },
     "logout": {
       "signingOut": "Signing out...",
-      "pleaseWait": "Please wait"
+      "pleaseWait": "Please wait",
+      "redirectingAfterError": "Redirecting after error..."
     },
     "signup": {
       "title": "Create Account",
@@ -374,6 +381,7 @@
   },
   "workOrders": {
     "title": "Work Orders",
+    "attachmentsCount": "{{count}} attachment(s)",
     "create": {
       "button": "New Work Order",
       "title": "Create work order",
@@ -387,6 +395,12 @@
         "cancelButton": "Cancel",
         "submitButton": "Create"
       }
+    },
+    "new": {
+      "requiredFields": "Please fill in all required fields",
+      "success": "Work order created successfully",
+      "woNumber": "Work Order #{{number}}",
+      "uploadHint": "Drag and drop files here, or click to browse"
     },
     "status": {
       "open": "Open",
@@ -682,7 +696,17 @@
     "search": "Search help articles",
     "categories": "Categories",
     "popular": "Popular Articles",
-    "getStarted": "Getting Started"
+    "getStarted": "Getting Started",
+    "article": {
+      "comments": {
+        "title": "Comments",
+        "placeholder": "Write your comment...",
+        "submit": "Post Comment",
+        "success": "Comment posted successfully",
+        "error": "Failed to post comment",
+        "auth": "Please sign in to comment"
+      }
+    }
   },
   "souq": {
     "search": {
@@ -874,6 +898,7 @@
     "reports": "Reports",
     "system": "System",
     "administration": "Administration",
+    "admin": "Admin",
     "settings": "Settings",
     "help": "Help",
     "logout": "Logout",
@@ -1093,7 +1118,19 @@
       "residential": "Residential",
       "commercial": "Commercial",
       "mixed": "Mixed",
-      "details": "Property Details"
+      "details": "Property Details",
+      "detail": {
+        "errors": {
+          "noPropertyId": "Property ID is required"
+        }
+      }
+    },
+    "vendors": {
+      "detail": {
+        "errors": {
+          "noVendorId": "Vendor ID is required"
+        }
+      }
     },
     "title": "Facility Management",
     "dashboard": "Dashboard",
